--- a/testProject01/test.yaml
+++ b/testProject01/test.yaml
@@ -17,5 +17,12 @@ spec:
       containers:
       - name: nginx
         image: nginx:1.14.2
+        resources:
+          requests:
+            memory: "50Mi"
+            cpu: "100m"
+          limits:
+            memory: "150Mi"
+            cpu: "150m"
         ports:
         - containerPort: 80
